--- a/CarpetaHenry/styles.css
+++ b/CarpetaHenry/styles.css
@@ -1,7 +1,26 @@
 body {
-    font-family: 'Georgia', serif;
-    background-color: #ebebeb;
-    color: #212022;
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: #2b2b2b;
+    color: #dbdbdb;
     margin: 30px;
 }
 
+header {
+    text-align: center;
+    background-color: mediumpurple;
+    color: rgba(255, 255, 255, 0.877);
+    margin: -30px;
+    margin-bottom: 20px;
+    padding-top: 2px;
+    padding-bottom: 1px;
+}
+
+.dibujines {
+    border: 2px solid black;
+    height: 250px;
+    margin: 5px ;
+}
+
+#principal {
+    font-size: 50px;
+}
